# Green-Hackathon-Project

./: .dockerignore  .env.example  .gitignore  AUTH.md  BACKEND.md  Dockerfile  JUDGING.md  PLAN.md  README.md  fly.toml  pyproject.toml  start.sh  stop.sh
.deploy/api-only/: Dockerfile  fly.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: auth.py  config.py  database.py  enums.py  main.py  models.py  seed.py
backend/config/: settings.py
backend/routers/: auth.py  misc.py  projects.py  users.py  workshops.py
backend/schemas/: auth.py  projects.py  users.py  workshops.py
backend/tests/: conftest.py  test_projects.py  test_users.py  test_workshops.py
backend/utils/: karma.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: FilterRow.tsx
frontend/src/components/cards/: KarmaCard.tsx  MapCard.tsx  ProjectCard.tsx  SkillsCard.tsx  Workshop.tsx
frontend/src/components/layout/: Hero.tsx  TopNav.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Chip.tsx  Eyebrow.tsx  IconButton.tsx  Progress.tsx  Tag.tsx  formControls.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  icons.tsx  karma.ts
frontend/src/pages/: CommunityPage.tsx  HostWorkshopPage.tsx  LoginPage.tsx  Profile.tsx  ProfilePage.tsx  ProjectsPage.tsx  RegisterPage.tsx  ResourcesPage.tsx  StartPage.tsx  StartWorkshopPage.tsx
frontend/src/styles/: global.css
frontend/src/styles/tokens/: colors.css  fonts.css  spacing.css  typography.css
