[project]
name = "green-hackathon-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "whitenoise>=6.7",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
    "dj-database-url>=2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-django>=4.8",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.0",
    "djangorestframework-stubs>=3.15",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["backend"]
testpaths = ["backend"]
